tiny bit of stuff

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -446,7 +446,9 @@
  # Feudal Tree
  FEU_def_country_name:0 "[ROOT.GetNameDefCap]"
  FEU_secure_internal_politics:0 "Secure Internal Politics"
- FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Position"
+ FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Authority"
+ FEU_strengthen_feudalism:0 "Strengthen the Feudal System"
+
  FEU_our_place_in_the_world:0 "Our Place in the World"
  FEU_our_place_in_the_world_desc:0 "The [ROOT.GetAdjectiveCap] people have a complex history with deep-rooted traditions. It is imperative for a great nation like ours to assert its position in the world."
  FEU_maintain_neutrality:0 "Maintain Neutrality"
