--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5776,7 +5776,12 @@ ww1_romania.93.t:0 "The Death of Aurel Vlaicu"
 ww1_romania.93.d:0 "Aurel Vlaicu, a Romanian plane designer, has unfortunately passed away in the Carpathian Mountains as he attempted to be the first person to fly across them. Few attacked his friends, who were on the journey with him, following behind in a car, and accused them of sabotage. They of course deny this claim, and instead claim the motor was cut off in order to land, which made it difficult to steer the plane, which crashed."
 ww1_romania.93.a:0 "Rest in peace."
 
-
+ww1_romania.94.t:0 "Coalition Government Collapses"
+ww1_romania.94.d:0 "Driven by anger across the political spectrum from our move to nationalize resita property, both the PNL and PCD have announced their withdraw from our coalition. The PNL, whos base has consolidated amongst middle class voters, oppose the move as it hurts the interest of their voter base. The PCD on the otherhand, opposed the idea of any nationalization in general. Thus, with the coalition already strained in recent weeks, this move turned out to be the breaking point."
+ww1_romania.94a:0 "This could be the end of our government!"
+ww1_romania.95.t:0 "The Artifical Crisis"
+ww1_romania.95.d:0 "Fueled by a desire to see an end to the current government, Ionescu and Bratinu have came to a deal to create an artifical crisis to force Averescu to resign. It seems this crisis has scared King Ferdinand, who has agreed to appoint Ionescu to form a government in his place."
+ww1_romania.95.a:0 "Those rats!"
 #custom tooltips
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
 ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
