--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5823,7 +5823,7 @@ obviously_dude.tt:0 "If §YAustria Hungary§! accepts, we will be §Rlocked§! i
 ww1_romania.59.d:0 "To teach Prince Carol the importance of Prussian Values, Carol has been commissioned as a officer in the Kings Guard. Carol himself however has proved more interesting in partying, drinking, and chasing after women then doing any job in the army. His performance in drills has been abysmal, and the new job has only increased attention on the young princes personal scandals, which has became a favorite topic of Romanian news papers as of late."
 ww1_romania.59.a:0 "How dare they slander the prince?!"
 ROM_oppose_populism:0 "Oppose Populism"
-ROM_oppose_populism_desc:0 "Checks and balances make the world go 'round. If any one man seeks to centralize power under one position all of that goes out of order. Measures must be taken to ensure that power doesn't concentrate under a single person in our coalition. Laws can be drafted to ensure that this does not become the case, such as adding a filibuster and emulating some ideas from the United States. Tyranny must never reign."
+ROM_oppose_populism_desc:0 "Fear mongering and blatant pandering are threating to tear Romanias social fabric apart. We must oppose these radicals, from all sides of the political spectrum, and work towards isolating them to consolidate Romanian politics amongst those who are most reasonable."
 ww1_romania.59.b:0 "You know, I think it would be for the best if he took a different job"
 ROM_strike_swift_and_hard_tt:0 "On the completion of the §YTurn West§! focus:\n"
 ROM_german_industrial_aid2:0 "German Arms Embargo"
