small navy tree + more aviation mechanics

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5775,7 +5775,6 @@ ww1_romania.92.c:0 "We're still socialist, trust me!"
 ww1_romania.93.t:0 "The Death of Aurel Vlaicu"
 ww1_romania.93.d:0 "Aurel Vlaicu, a Romanian plane designer, has unfortunately passed away in the Carpathian Mountains as he attempted to be the first person to fly across them. Few attacked his friends, who were on the journey with him, following behind in a car, and accused them of sabotage. They of course deny this claim, and instead claim the motor was cut off in order to land, which made it difficult to steer the plane, which crashed."
 ww1_romania.93.a:0 "Rest in peace."
-
 ww1_romania.94.t:0 "Coalition Government Collapses"
 ww1_romania.94.d:0 "Driven by anger across the political spectrum from our move to nationalize resita property, both the PNL and PCD have announced their withdraw from our coalition. The PNL, whos base has consolidated amongst middle class voters, oppose the move as it hurts the interest of their voter base. The PCD on the otherhand, opposed the idea of any nationalization in general. Thus, with the coalition already strained in recent weeks, this move turned out to be the breaking point."
 ww1_romania.94a:0 "This could be the end of our government!"
@@ -5785,6 +5784,12 @@ ww1_romania.95.a:0 "Those rats!"
 ww1_romania.96.t:0 "Vote of No Confidence"
 ww1_romania.96.d:0 "Dissatisfied with Ionescu's appointment in the first place, the PNL and the Peasants party have already made their move to oust the PCD. Accusing Ionescu of being weak on communism as well as being corrupt, they've passed a vote of no confidence as well as convinced Ferdinand that Ionescu is unfit to govern. With strong political backing, Ionsecu has little choice but to resign."
 ww1_romania.96.a:0 "What? But we only took office a month ago!"
+ww1_romania.97.t:0 "First flight across the Carpathian Mountains"
+ww1_romania.97.d:0 "Aurel Vlaicu has successfully conducted a flight in the Carpathian Mountains, the first in that region. The A. Vlaicu Nr. IV will now be immortalized as a proud Romanian treasure and accomplishment."
+ww1_romania.97.a:0 "Incredible."
+ROM_1912_naval_program:0 "[GetYear] Naval Program"
+ROM_screening_focus:0 "Focus on Surface Wolves"
+ROM_submarine_focus:0 "Focus on Underwater Snipers"
 #custom tooltips
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
 ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
@@ -5793,7 +5798,7 @@ ROM_depends_on_event.tt:0 "§WThis focus will be §W§Gautocompleted§G§W with 
 ROM_commissioned_plane:0 "Has received plane commission"
 ROM_aurel_vlaicu.tt:0 "§WRetire §W§YAurel Vlaicu§Y§W from §W§YRomania§Y§W"
 ROM_aurel_vlaicu_death_disable.tt:0 "§WWe will now §W§Rnot§R§W be able to commission §W§YAurel Vlaicu§Y§W for the focus '§W§YCommission Military Aircraft§Y§W' anymore."
-
+ROM_aurel_vlaicu_survives:0 "Aurel Vlaicu survives flight across Carpathians"
 ROM_the_kings_government:0 "The King's Favorite"
 ROM_the_kings_government_desc:0 "King Carol has grown tired of the bickering between the PC and the PNL. Perhaps the rotation system may finally stop due to his displeasure with the next party exceeding his displeasure with the current one. Nevermind that, though. All that is known now is that a moderate government has been entrusted to the PCD. Negotiations have begun for a coalition encompassing the centrist delegates."
 ROM_romanian_army_idea:0 "Romanian Army"
