--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2879,6 +2879,9 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_the_natural_enemy_idea:0 "The Natural Enemy"
  ROM_social_welfare_idea:0 "State-Funded Social Welfare"
 ROM_abandon_federalism_idea:0 "Abandon Federalism"
+ROM_1912_naval_program_idea:0 "[ROM.GetAdjective] Naval Program"
+ROM_1912_naval_program_idea_screen:0 "Surface Hunters"
+ROM_1912_naval_program_idea_sub:0 "Underwater Sinkers"
 
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
