some balance changes

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -29,6 +29,8 @@
 
  absolute_monarchy:0 "Absolute Monarchy"
  absolute_monarchy_desc:0 "An absolute monarchy is a form of government in which a single person—usually a king or queen—holds absolute, autocratic power. In absolute monarchies, the succession of power is typically hereditary, with the throne passing among members of a ruling family."
+ absolute_monarchy_reserve:0 "An absolute monarchy is a form of government in which a single person—usually a king or queen—holds absolute, autocratic power. In absolute monarchies, the succession of power is typically hereditary, with the throne passing among members of a ruling family."
+ absolute_monarchy_reserve:0 "Absolute Monarchy"
  semi_constitutional_monarchy:0 "Semi-Constitutional Monarchy"
  semi_constitutional_monarchy_desc:0 "A semi-constitutional monarchy is a form of authoritarian government where the constitution guarantees basic rights and liberties, as well as some degree of representation for the people, but the Monarch retains the main portion of political power in the state, usually by unilaterally appointing the government responsible to them."
  semi_constitutional_monarchy_reserve:0 "$semi_constitutional_monarchy$"
