--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -926,10 +926,14 @@
  TUR_havacilik_komisyonu_tt:0 "[TUR_independent_aircraft_research_tt][TUR_domestic_aircraft_industry_tt]"
  TUR_independent_aircraft_research_tt_yes:0 "£research_speed_texticon  Air Research Speed: §G+15%§! \n"
  TUR_domestic_aircraft_industry_tt_yes:0 "§YFighter§!: £production_cost Production Cost: §G-10.00%§! \n§YGround Attack Plane§!: £production_cost Production Cost: §G-10.00%§! \n§YLight Bomber§!: £production_cost Production Cost: §G-10.00%§! \n"
- TUR_separatist_sentiments:0 "Separatist Sentiments"
- TUR_separatist_sentiments_desc:0 "Our empire harbors many ethnicities within it. From the mountains of the Balkans, to the deserts of Arabia; our empire rules over Greeks, Armenians, Slavs, Arabs, Albanians, Kurds and many more. Yet not all of these minorities necessarily keen on being a part of our great nation. As these elements within our nation cause us trouble, it's our duty to manage them depending on where their loyalties lie."
- TUR_separatist_sentiments_idea:0 "Separatist Sentiments"
- TUR_separatist_sentiments_idea_desc:0 "Our empire harbors many ethnicities within it. From the mountains of the Balkans, to the deserts of Arabia; our empire rules over Greeks, Armenians, Slavs, Arabs, Albanians, Kurds and many more. Yet not all of these minorities necessarily keen on being a part of our great nation. As these elements within our nation cause us trouble, it's our duty to manage them depending on where their loyalties lie."
+ TUR_the_sublime_realm:0 "[TUR_the_sublime_realm_name]"
+ TUR_the_sublime_realm_desc:0 "[TUR_the_sublime_realm_name_desc]"
+ TUR_the_sublime_realm_ottoman:0 "Sublime Realm"
+ TUR_the_sublime_realm_ottoman_desc:0 "From a small beylik in Anatolia to an empire spanning three continents, our empire in it's six hundred years of lifespan has witnessed eras changing around it. From the middle ages to the contemporary times, our empire persisted and preserved its spot in the world politics. Having harbored various peoples with different religions, customs and ethnicities, its territories ranged from the tips of the Balkan mountains to the edges of the Arabian deserts. Though having this many different voices under one flag sometimes causes troubles, the Sublime Realm shall persist through more centuries to come."
+ TUR_the_sublime_realm_republic:0 "Eternal State"
+ TUR_the_sublime_realm_republic_desc:0 "Our centuries old empire, shattered before our eyes. But a new, young nation; being born from its ashes. The new republic under its founders wish to create a new state that has never been seen before. Finally a nation that the Turks can call their own, purified from the old segregationary regime that belittled us to only our religious identities, is set to make these lands truly a place to be called home. While the goal to create an ethnically and religiously pure nation is in motion, those who aren't welcome in it is set to create some trouble. No matter what to come, our nation is set to be an eternal state."
+ TUR_the_sublime_realm_tt:0 "§YStability Factor§! and §YWar Support Factor§! will §Rdecrease§! depending on the §Yminorities§! the states we control and the §Ypolicies§! we enact on them"
+ TUR_change_sublime_realm_to_eternal_state:0 "Replace §YSublime Realm§! with §YEternal State§!\n\n"
  TUR_army_factionalism:0 "£pol_idea  Army Factionalism"
  TUR_army_factionalism_desc:0 "New era in our empire has brough a new political order with it. Instead of experienced governors ruling the nation like they used to do, or democracy reigning over our country like the constitution envisioned, military cliques and factions strive for power. Both sides of the political spectrum wish to rise to power via military coupes rather than democratic means. Unless we manage to maintain our grip over these cliques, political consequences are imminent."
  TUR_army_factionalism2:0 "Army Factionalism"
@@ -1047,7 +1051,7 @@
  TUR_committee_member_7_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%§!"
  TUR_committee_influence:0 "Committee Influence"
  TUR_committee_influence_desc:0 "The Central Committee is trying to increase its influence on our regional authority. While our authority is being undermined, the state's influence comes with its own benefits."
- TUR_ottoman_4th_army:0 "Ottoman 4th Army"
+ TUR_ottoman_4th_army:0 "[ROOT.GetAdjective] 4th Army"
  TUR_ottoman_4th_army_desc:0 "When our commandeer Cemâl Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the Ottoman Fourth Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
  TUR_ottoman_4th_army_tt:0 "[TUR_o4a_battalion_limit]"
  TRS_arab_opposition:0 "Arab Opposition"
