--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -29,6 +29,8 @@
 
  absolute_monarchy:0 "Абсолютная монархия"
  absolute_monarchy_desc:0 "Абсолютная монархия - это форма правления, при которой один человек - обычно король или королева - обладает абсолютной, самодержавной властью. В абсолютных монархиях преемственность власти обычно наследственная, трон переходит от одного члена правящей семьи к другому."
+ absolute_monarchy_reserve:0 "Абсолютная монархия"
+ absolute_monarchy_reserve_desc:0 "Абсолютная монархия - это форма правления, при которой один человек - обычно король или королева - обладает абсолютной, самодержавной властью. В абсолютных монархиях преемственность власти обычно наследственная, трон переходит от одного члена правящей семьи к другому."
  semi_constitutional_monarchy:0 "Полуконституционная монархия"
  semi_constitutional_monarchy_desc:0 "Полуконституционная монархия - это форма авторитарного правления, при которой конституция гарантирует основные права и свободы, а также определенную степень представительства народа, но монарх сохраняет за собой основную часть политической власти в государстве, обычно в одностороннем порядке назначая ответственное перед ним правительство."
  semi_constitutional_monarchy_reserve:0 "$semi_constitutional_monarchy$"
