--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -5288,7 +5288,7 @@
  TUR_relocate_armenians_to_the_east:0 "Relocate Armenians to the East"
  TUR_relocate_armenians_to_the_east_desc:0 "Armenians have been a thorn on our side for too long. But we can't just kill all of them right? If we wan't them to be gone from the region, we have to strike a deal with their government to take them."
  TUR_forced_assimilation_for_eastern_christians:0 "Forced Assimilation of Eastern Christians"
- TUR_forced_assimilation_for_eastern_christians_desc:0 "As there's no other place for Armenians and Assyrians to go, we have to coexist with them within our empire. Yet their separatist sentiments are making this impossible. Only way for them to stay in this empire is to assimilate into it."
+ TUR_forced_assimilation_for_eastern_christians_desc:0 "As there's no other place for Armenians and Assyrians to go, we have to coexist with them within our empire. Yet their [TUR_the_sublime_realm_name] are making this impossible. Only way for them to stay in this empire is to assimilate into it."
  TUR_return_georgians_to_georgia:0 "Return Georgians to Georgia"
  TUR_return_georgians_to_georgia_desc:0 "The Georgian population in our eastern provinces are inconsequential. The low number of them makes it easier for the demographics of the region to be changed. We can easily send Georgians into Georgia with the permission of their country."
  TUR_forced_assimilation_for_georgians:0 "Forced Assimilation for Georgians"
