--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5054,7 +5054,7 @@ no_take_until_ROM.tt:0 "The §CKing§! will make a variety of suggestions for ou
 ww1_romania.9.a:0 "Lets see how they do!"
 ROM_ferd_king:0 "Ferdinand I is King of Romania"
 ww1_romania.8.t:0 "The Carol Mosque"
-ww1_romania.8.d:0 "While the muslims population in Romania is small, they do have prominence. As a sign of respect and solidarity with Romanian muslims, as well as a act of good will to the Ottoman Empire, King Carol today ordered construction to begin on a grand mosque in Constanta, one of our largest cities. While construction will be slow, the ambitious project will certainly increase tourism to our country once completed."
+ww1_romania.8.d:0 "While the Muslim population in Romania is small, they do have prominence. As a sign of respect and solidarity with Romanian Muslims, as well as a act of good will to the Ottoman Empire, King Carol today ordered construction to begin on a grand mosque in Constanta, one of our largest cities. While construction will be slow, the ambitious project will certainly increase tourism to our country once completed."
 ww1_romania.8.a:0 "We're an inclusive country!"
 ww1_romania.1.t:0 "The Puppet Master"
  ww1_romania.28.t:0 "The Outbreak of the Great War"
@@ -5369,7 +5369,7 @@ ww1_romania.27.d: "King Carol I, the ruler of Romania since it's entire history 
 ww1_romania.27.a:0 "Să-i fie țărâna ușoară."
 ww1_romania.27.a:0 "Long live king Ferdinand."
 ROM_overturn_the_blue_law:0 "Overturn the Blue Law"
-ROM_overturn_the_blue_law_desc:0 "Separation of church and state is one of the most important principles of the Romanian constitution. The blue law, banning shopping on Sundays, is mostly inspired by Chris's teachings. While Christians are free to follow this principle, it shouldn't be forced on everyone."
+ROM_overturn_the_blue_law_desc:0 "Separation of church and state is one of the most important principles of the Romanian constitution. The blue law, banning shopping on Sundays, is mostly inspired by Christ's teachings. While Christians are free to follow this principle, it shouldn't be forced on everyone."
 pcd_leader:0 "Member of the §mPCD§!"
 pcd_member:0 "Member of the §mPCD§!"
 pcd_leader2:0 "Member of the §mPCD§!"
@@ -5475,9 +5475,9 @@ ROM_our_piece_of_the_pie_desc:0 ""
 ROM_stir_anti_austrianism:0 "Stir Anti-Austrianism"
 ROM_stir_anti_austrianism_desc:0 "Austria has long been an enemy of the Romanian people. They stole Bukovina from Moldavia, occupied us several times and in co-operation with the Hungarians, unleashed further oppression on Transylvianian Romanians when they petitioned the Austrian Kaiser for autonomy. Romania cannot be whole until Transylvania is free."
 ROM_turn_west:0 "Turn West"
-ROM_turn_west_desc:0 ""
+ROM_turn_west_desc:0 "Since we've detached ourselves from the Triple Alliance, new allies will be needed. Luckily, we have already found a willing partner in the French. Francophilia is widespread amongst all arms of government and the general public, partly due to shared Latin roots, with Bucharest being remodelled to emulate Paris. Therefore aligning ourselves with Paris is the most logical option."
 ww1_romania.33.t:0 "Hundreds of thousands of Leu for Public Works Misplaced"
-ww1_romania.33.d:0 "It seems Prime minister Carp is not beating the allegations of incompetence, as newspapers across Romania are reporting hundreds of thousands of Leu has been completly misplaced, with the funds likely being stolen by corrupt officals at the lower level. Carp already has a reputation amongst the King and the general public of being incompetent and arrogant, and this report certainly isn't helping. The PNL has blasted the conservative party for their incompetence, with some accusing PC officals of taking the cash themselves. "
+ww1_romania.33.d:0 "It seems Prime Minister Carp is not beating the allegations of incompetence, as newspapers across Romania are reporting hundreds of thousands of Leu have been completly misplaced, with the funds likely being stolen by corrupt officals at the lower level. Carp already has a reputation amongst the King and the general public of being incompetent and arrogant, and this report certainly isn't helping. The PNL has blasted the conservative party for their incompetence, with some accusing PC officals of taking the cash themselves. "
 ww1_romania.33.a:0 "This is a total nothing burger!"
 ROM_minimum_wage_law:0 "Minimum Wage Law"
 ROM_pro_entente_protests:0 "Pro-Entente Protesters"
@@ -5503,7 +5503,7 @@ ROM_our_rural_base_desc:0 "We need to consolidate our support across the country
 ROM_invite_western_thinkers:0 "Invite Western Thinkers"
 ROM_invite_western_thinkers_desc:0 ""
 ROM_invest_in_romania_steel_industry:0 "Roll Back Land Reform"
-ROM_invest_in_romania_steel_industry_desc:0 ""
+ROM_invest_in_romania_steel_industry_desc:0 "While land reform was instituted after the recent Peasants Revolt in 1907, it has been poorly enforced. Nevertheless it still poses a threat to the power of the aristocracy, which is why further land reform shall be opposed to counteract Liberal influence."
 ROM_romania_for_those_who_deserve_it:0 "Romania For Those Who Deserve it"
 ROM_romania_for_those_who_deserve_it_desc:0 ""
 ROM_military_cooperation_with_austria:0  "Military Cooperation with Austria-Hungary"
