egyptian integration decisions

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3946,10 +3946,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_muscat_vilayet_294_yes:0 "\n§Y[294.GetName]§!:[TUR_arab_population_294]"
  ottoman_muscat_vilayet_658_yes:0 "\n§Y[658.GetName]§!:[TUR_arab_population_658]"
 
- TUR_suez_vilayet:0 "Suez Vilayet"
+ TUR_suez_vilayet:0 "Suez Mutasarrifate"
  TUR_suez_vilayet_desc:0 "[TUR_suez_vilayet_desc]"
  TUR_suez_vilayet_desc_yes:0 "§W[ottoman_suez_vilayet_centralization_desc][ottoman_suez_vilayet_separatist_sentiments_desc]§!"
- ottoman_suez_vilayet_tt_blocked:0 "§YSuez Vilayet§![ottoman_suez_vilayet_centralization][ottoman_suez_vilayet_separatist_sentiments]"
+ ottoman_suez_vilayet_tt_blocked:0 "§YSuez Mutasarrifate§![ottoman_suez_vilayet_centralization][ottoman_suez_vilayet_separatist_sentiments]"
  ottoman_suez_vilayet_centralization_yes:0 "\nCentralization: [?global.TUR_suez_centralization|Y0%]"
  ottoman_suez_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_suez_centralization|Y0%][ottoman_suez_vilayet_centralization_value]"
  ottoman_suez_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_suez_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_suez_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_suez_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_suez_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_suez_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_suez_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_suez_vc_effect|+%]"
@@ -5672,6 +5672,33 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
  TUR_massacre_assyrians_diyarbakir:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_diyarbakir_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
+ TUR_caliphs_authority_in_egypt_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£compliance_gain_texticon  Compliance Growth Speed: §G+3%§!\n\n"
+ TUR_increase_cairo_centralization_20:0 "Modify §YCentralization§! of §YCairo Vilayet§! by §G+20%§!\n"
+ TUR_increase_marsa_matruh_centralization_20:0 "Modify §YCentralization§! of §YMarsa Matruh Vilayet§! by §G+20%§!\n"
+ TUR_increase_aswan_centralization_20:0 "Modify §YCentralization§! of §YAswan Vilayet§! by §G+20%§!\n"
+ TUR_increase_khartoum_centralization_20:0 "Modify §YCentralization§! of §YKhartoum Vilayet§! by §G+20%§!\n"
+ TUR_increase_cairo_centralization_15:0 "Modify §YCentralization§! of §YCairo Vilayet§! by §G+15%§!\n"
+ TUR_increase_marsa_matruh_centralization_15:0 "Modify §YCentralization§! of §YMarsa Matruh Vilayet§! by §G+15%§!\n"
+ TUR_increase_aswan_centralization_15:0 "Modify §YCentralization§! of §YAswan Vilayet§! by §G+15%§!\n"
+ TUR_increase_khartoum_centralization_15:0 "Modify §YCentralization§! of §YKhartoum Vilayet§! by §G+15%§!\n"
+ TUR_combat_separatism_in_egypt_tt1:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£attrition_texticon  Division Attrition: §R+80.0%§!\n"
+ TUR_combat_separatism_in_egypt_tt2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-80.0%§!\n£supply_texticon  Local Supplies: §G+5%§!\n\n"
+ TUR_increase_cairo_centralization_5:0 "Modify §YCentralization§! of §YCairo Vilayet§! by §G+5%§!\n"
+ TUR_increase_marsa_matruh_centralization_5:0 "Modify §YCentralization§! of §YMarsa Matruh Vilayet§! by §G+5%§!\n"
+ TUR_increase_aswan_centralization_5:0 "Modify §YCentralization§! of §YAswan Vilayet§! by §G+5%§!\n"
+ TUR_increase_khartoum_centralization_5:0 "Modify §YCentralization§! of §YKhartoum Vilayet§! by §G+5%§!\n"
+ TUR_increase_cairo_centralization_50:0 "Modify §YCentralization§! of §YCairo Vilayet§! by §G+50%§!\n"
+ TUR_increase_marsa_matruh_centralization_50:0 "Modify §YCentralization§! of §YMarsa Matruh Vilayet§! by §G+50%§!\n"
+ TUR_increase_aswan_centralization_50:0 "Modify §YCentralization§! of §YAswan Vilayet§! by §G+50%§!\n"
+ TUR_increase_khartoum_centralization_50:0 "Modify §YCentralization§! of §YKhartoum Vilayet§! by §G+50%§!\n"
+ TUR_increase_suez_centralization_70:0 "Modify §YCentralization§! of §YSuez Vilayet§! by §G+70%§!\n"
+ TUR_integrate_egyptian_economy_tt:0 "Has selected §YIntegrate Egyptian Elite§!\n"
+ TUR_integrate_egyptian_society_tt:0 "Has selected §YIntegrate Egyptian Economy§!\n"
+ TUR_nationalized_suez_canal:0 "Nationalized Suez Canal"
+ TUR_push_regulations_for_the_suez_canal_tt1:0 "Has selected §YNationalize the Suez Canal§!\n"
+ TUR_push_regulations_for_the_suez_canal_tt2:0 "§YSuez Canal§! will be §Rblocked§! for countries with less than §R-50§! opinion.\n"
+ bosporus_strait_blocked_tt:0 "§RThis canal has been blocked for us since our opinion of [447.controller.GetName] is less than -50.§!"
+ TUR_increase_suez_centralization_30:0 "Modify §YCentralization§! of §YSuez Vilayet§! by §G+30%§!\n"
  TUR_occupy_mount_lebanon_mutasarrifate:0 "Occupy Mount Lebanon Mutasarrifate"
  TUR_occupy_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate with a vide autonomy. Apart from various exceptions, we're forbidden to put troops in the region. By occupying Mount Lebanon, we'll decrease their defacto autonomy and put troops in the region."
  TUR_occupy_mount_lebanon_mutasarrifate_tt:0 "Replace §YAutonomous Mutasarrifate§! with §YAutonomous Vilayet§!\nEffective change:\n£resources_texticon  Resource Gain Efficiency: §G+35.00%§!\n£civ_factory  Local Factories: §G+35%§!\n£compliance_gain_texticon  Compliance Growth Speed: §R-3%§!\n£manpower_texticon  Recruitable Population: §G+35.00%§!\n\n"
