--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1118,6 +1118,8 @@
  TUR_mehmed_resid_committee:0 "Mehmed Reşit Bey"
  TUR_mehmed_resid_committee_desc:0 "\n\n\n\n\n\n£GFX_TUR_mehmed_resid_texticon \n\n\n\n\n\n\n\nMustafa Rahmi Bey, the governor of Diyarbakır Vilayet, is a prominent member of the Committee of Union and Progress. His connections to the committee has allowed himself to gain a wide range of autonomy in his actions, even though he is known to be creating his own institutions and even small military force in parallel to the state."
  TUR_mehmed_resid_committee_tt:0 "£decision_icon_small  §YDecisions§! related to §Yminorities§! are §Gtwice as fast§!\n"
+ TUR_recently_integrated_economy:0 "Recently Integrated Economy"
+ TUR_recently_integrated_economy_desc:0 "Recently integrated economy in the region gives us useful benefits, though their benefits are not ever lasting."
 
  AUH_austrian_integration:0 "Austrian Integration"
  AUH_condominium_of_bosnia_and_herzegovina:0 "Condominium of Bosnia and Herzegovina"
